--- a/JiaoBaoYun-hb/html/cloud/record_student_main.html
+++ b/JiaoBaoYun-hb/html/cloud/record_student_main.html
@@ -10,7 +10,7 @@
 		<link rel="stylesheet" href="../../css/mui.min.css">
 		<link rel="stylesheet" href="../../css/utils/common.css" />
 		<script src="../../js/mui.min.js"></script>
-		<script type="text/javascript" src="../../js/utils/events.js" ></script>
+		<script type="text/javascript" src="../../js/utils/events.js"></script>
 	</head>
 
 	<body>
@@ -51,7 +51,7 @@
 			var data = main.data; //接收A页面传入参数值
 			console.log('main-data:' + JSON.stringify(data));
 
-			document.body.querySelector('.mui-title').innerText = '云盘--' + data.StudentNames + '档案';
+			document.body.querySelector('.mui-title').innerText = '云盘--' + data.StudentName + '档案';
 
 			//创建子页面
 			var sub = plus.webview.create('record_student_sub.html', 'record_student_sub.html', {
@@ -66,7 +66,7 @@
 			//---获取数据并传递数据---end---
 			document.getElementById('add').addEventListener('tap', function() {
 				events.openNewWindowWithData('record_student_add.html', {
-					data: data,
+					data: data
 				});
 			})
 		})
