--- a/JiaoBaoYun-hb/html/cloud/record_student_sub.html
+++ b/JiaoBaoYun-hb/html/cloud/record_student_sub.html
@@ -164,8 +164,8 @@
 						if(flag == 1) {
 							tempPage = 1;
 							recordArray = tempRspData;
-							table.innerHTML='';
-							lastDate='';
+							table.innerHTML = '';
+							lastDate = '';
 						} else {
 							//合并数组
 							recordArray = recordArray.concat(tempRspData);
@@ -190,7 +190,7 @@
 				var main = plus.webview.currentWebview(); //获取当前窗体对象
 				var subData = main.data; //接收页面传入的参数值
 				console.log('从父页面获取的数据:' + JSON.stringify(subData));
-				studentName = subData.StudentNames;
+				studentName = subData.StudentName;
 				//---从父页面获取数据---end---
 				var comData = {
 					parentId: userId, //家长ID
