--- a/JiaoBaoYun-hb/html/mine/qun_data_details.html
+++ b/JiaoBaoYun-hb/html/mine/qun_data_details.html
@@ -155,25 +155,25 @@
 						<li class="mui-table-view-cell">
 							<div class="mui-input-row">
 								<label>职位:</label>
-								<input id="tea_job" type="text" class="mui-input-clear">
+								<input id="tea_job" type="text" class="mui-input-clear" value="">
 							</div>
 						</li>
 						<li class="mui-table-view-cell">
 							<div class="mui-input-row">
 								<label>科目:</label>
-								<input id="tea_sub" type="text" class="mui-input-clear">
+								<input id="tea_sub" type="text" class="mui-input-clear" value="">
 							</div>
 						</li>
 						<li class="mui-table-view-cell">
 							<div class="mui-input-row">
 								<label>职称:</label>
-								<input id="tea_title" type="text" class="mui-input-clear">
+								<input id="tea_title" type="text" class="mui-input-clear" value="">
 							</div>
 						</li>
 						<li class="mui-table-view-cell">
 							<div class="mui-input-row">
 								<label>教龄:</label>
-								<input id="tea_expsch" type="number" class="mui-input-clear">
+								<input id="tea_expsch" type="number" class="mui-input-clear" value="">
 							</div>
 						</li>
 						<li class="mui-table-view-cell">
