个人空间底部评论按钮加点击事件

--- a/JiaoBaoYun-hb/html/quan/zonep_sub.html
+++ b/JiaoBaoYun-hb/html/quan/zonep_sub.html
@@ -531,6 +531,10 @@
 			});
 			mui('.mui-table-view').on('tap', '.dynamic-comment-btn', function() {
 				click.push('评论按钮');
+				tempIndex = this.id.replace('bottomComment', '');
+				console.log('tempIndex====' + tempIndex)
+				mui('.mui-popover').popover('show');
+				window.event.stopPropagation()
 			});
 		});
 
