--- a/JiaoBaoYun-hb/html/index/mine.html
+++ b/JiaoBaoYun-hb/html/index/mine.html
@@ -104,7 +104,13 @@
 					var personalUTID = window.myStorage.getItem(window.storageKeyName.PERSONALINFO).utid; //用户id
 
 					console.log('click position:' + this.getAttribute('position'))
-//				
+					if(plus.os.name == 'Android') {
+						setTimeout(function() {
+							closeMenu();
+						}, 1500);
+					} else {
+						closeMenu();
+					}
 					switch(parseInt(this.getAttribute('position'))) {
 						//群资料
 						case 0:
@@ -124,7 +130,7 @@
 							break;
 							//我的空间
 						case 4:
-						events.openNewWindowWithData('/html/quan/zone_main.html',personalUTID);
+							events.openNewWindowWithData('/html/quan/zone_main.html', personalUTID);
 							break;
 							//积分
 						case 5:
@@ -141,35 +147,32 @@
 						default:
 							break;
 					}
-					setTimeout(function(){
-						closeMenu()
-					},1500);
 				});
 			})
 			window.addEventListener('infoChanged', function() {
-					getInfo()
-				})
-			window.addEventListener('newsChanged',function(){
-					getNewsAmount();
+				getInfo()
 			})
-			/**
-			 * 获取个人信息
-			 */
+			window.addEventListener('newsChanged', function() {
+					getNewsAmount();
+				})
+				/**
+				 * 获取个人信息
+				 */
 			function getInfo() {
 				info = myStorage.getItem(storageKeyName.PERSONALINFO);
 				console.log('我的界面获取的个人信息：' + JSON.stringify(info))
 				if(info.uimg) {
 					var myDate = new Date();
 					document.getElementById('uimg').src = info.uimg + '?' + myDate.getTime();
-				}else{
-					document.getElementById('uimg').src ='../../image/utils/default_personalimage.png';
+				} else {
+					document.getElementById('uimg').src = '../../image/utils/default_personalimage.png';
 				}
 				if(info.uname) {
 					document.getElementById('uname').innerText = info.uname;
 				}
 				if(info.utxt) {
 					document.getElementById('utext').innerText = info.utxt;
-				}else{
+				} else {
 					document.getElementById('utext').innerText = "暂无信息";
 				}
 				getNewsAmount();
@@ -177,28 +180,28 @@
 			/**
 			 * 获取新消息数量
 			 */
-			var getNewsAmount=function(){
-				var wd=plus.nativeUI.showWaiting(storageKeyName.WAITING);
-				postDataPro_PostGrInvC({},wd,function(data){
+			var getNewsAmount = function() {
+				var wd = plus.nativeUI.showWaiting(storageKeyName.WAITING);
+				postDataPro_PostGrInvC({}, wd, function(data) {
 					wd.close();
-					console.log('我的界面获取的新消息数目：'+JSON.stringify(data));
-					var num=document.getElementById('news-amount');
-					if(data.RspCode=='0000'){
-						num.style.display='inline';
-						num.innerText=setAmount(data.RspData);
-					}else{
-						num.style.display='none';
+					console.log('我的界面获取的新消息数目：' + JSON.stringify(data));
+					var num = document.getElementById('news-amount');
+					if(data.RspCode == '0000') {
+						num.style.display = 'inline';
+						num.innerText = setAmount(data.RspData);
+					} else {
+						num.style.display = 'none';
 					}
 				});
 			}
-			var setAmount=function(data){
-				var amount=0;
-				data.forEach(function(cell){
-					amount+=cell.pc;
-				})
-				return amount;
-			}
-			//关闭
+			var setAmount = function(data) {
+					var amount = 0;
+					data.forEach(function(cell) {
+						amount += cell.pc;
+					})
+					return amount;
+				}
+				//关闭
 			function closeMenu() {
 				mui.fire(main, "menu:close");
 			}
