--- a/JiaoBaoYun-hb/html/homework/workdetail-tea.html
+++ b/JiaoBaoYun-hb/html/homework/workdetail-tea.html
@@ -21,8 +21,10 @@
 		    <h1 class="mui-title">作业详情</h1>
 		</header>
 		<script src="../../js/mui.min.js"></script>
+		<script src="../../js/utils/events.js" type="text/javascript" charset="utf-8"></script>
 		<script type="text/javascript">
-			mui.init()
+			mui.init();
+			events.initSubPage('workdetail-tea-sub.html');
 		</script>
 	</body>
 
