验证码界面，添加发送主界面更新请求

--- a/JiaoBaoYun-hb/html/register/login.html
+++ b/JiaoBaoYun-hb/html/register/login.html
@@ -405,7 +405,7 @@
 									//
 									events.fireToPageNone('mine.html','infoChanged');
 									events.fireToPageNone('../cloud/cloud_home.html','infoChanged');
-									events.fireToPageNone('../quan/tab-zone.html','infoChanged')
+									events.fireToPageNone('../quan/tab-zone.html','infoChanged');
 									//存储自动登录
 									//									loginInfo.auto = 1;
 									//									window.myStorage.setItem(window.storageKeyName.AUTOLOGIN, loginInfo);
