--- a/JiaoBaoYun-hb/html/register/yanZhengMa.html
+++ b/JiaoBaoYun-hb/html/register/yanZhengMa.html
@@ -115,6 +115,7 @@
 									var temp;
 //									events.openNewWindowWithData('../../html/index.html', temp);
 									events.openNewWindowWithData('modify_password.html', temp);
+									events.fireToPageNone('../quan/tab-zone.html','infoChanged');
 								});
 							} else { //验证码模式登录1
 								console.log('yanzhengma denglu');
@@ -133,6 +134,7 @@
 										var temp;
 //										events.openNewWindowWithData('../../html/index.html', temp);
 										events.openNewWindowWithData('modify_password.html', temp);
+										events.fireToPageNone('../quan/tab-zone.html','infoChanged');
 									}
 
 								});
