修改首页发布动态按钮 重新登录重置数据源

--- a/JiaoBaoYun-hb/html/index/index.html
+++ b/JiaoBaoYun-hb/html/index/index.html
@@ -21,8 +21,8 @@
 		<header class="mui-bar mui-bar-nav common-background-bar">
 			<h1 id="title" class="mui-title">家校圈</h1>
 			<div id="random_icon">
-				<a id="pubDynamic" class="mui-icon mui-icon-compose  mui-pull-right mui-plus-visible" style="padding-left: 20px;"></a>
-				<a id="aboutme" class="mui-icon  mui-pull-right mui-plus-visible" style="font-size: 16px;padding-top: 15px;">@与我相关<span id="aboutme_noRead" style="margin-left: -15px;margin-top: 4px;visibility:hidden;" class="mui-badge mui-badge-danger">4</span></a>
+				<a id="pubDynamic" class="mui-pull-right mui-plus-visible" style="padding-left: 20px;padding-top: 10px;font-size: 14px;">晒一晒</a>
+				<a id="aboutme" class="mui-icon  mui-pull-right mui-plus-visible" style="font-size: 14px;padding-top: 15px;">@与我相关<span id="aboutme_noRead" style="margin-left: -15px;margin-top: 4px;visibility:hidden;" class="mui-badge mui-badge-danger">4</span></a>
 			</div>
 		</header>
 		<!--底部选项卡（.mui-bar-tab）-->
