删除成员和删除资料，刷新界面

--- a/JiaoBaoYun-hb/html/cloud/app_keeprecord.html
+++ b/JiaoBaoYun-hb/html/cloud/app_keeprecord.html
@@ -562,7 +562,7 @@
 
 							});
 						} else {
-							if(data.RspCode != 9) {
+							if(data2.RspCode != 9) {
 								mui.toast(data.RspTxt);
 							}
 						}
