--- a/JiaoBaoYun-hb/html/cloud/keeprecord_callorrecord_sub.html
+++ b/JiaoBaoYun-hb/html/cloud/keeprecord_callorrecord_sub.html
@@ -329,6 +329,7 @@
 						//30.通过学生资料ID获取关联的家长
 						//所需参数
 						var comData = {
+							vtp: 'Id',
 							vvl: subData.stuid, //群成员群ID，stuid
 						};
 						//返回值model：model_userDataInfo
