--- a/JiaoBaoYun-hb/html/mine/qun_data_create.html
+++ b/JiaoBaoYun-hb/html/mine/qun_data_create.html
@@ -17,6 +17,7 @@
 		<script src="../../js/mui.min.js"></script>
 		<!--<script type="text/javascript" src="../../js/mui.picker.min.js"></script>-->
 		<script type="text/javascript" src="../../js/publicProtocol.js"></script>
+		<script type="text/javascript" src="../../js/utils/events.js" ></script>
 		<style>
 			body,
 			.mui-content {
@@ -343,8 +344,10 @@
 							wd.close();
 							console.log('90909090success:RspCode:' + data.RspCode + ',RspData:' + JSON.stringify(data.RspData) + ',RspTxt:' + data.RspTxt);
 							if(data.RspCode == 0) {
+								events.fireToPageNone('/html/mine/qun_data.html', 'refresh');
 								mui.toast('资料添加成功！');
 								console.log('资料添加成功！');
+								mui.back();
 							} else {
 								mui.toast(data.RspTxt);
 							}
