--- a/JiaoBaoYun-hb/html/mine/qun_data_details.html
+++ b/JiaoBaoYun-hb/html/mine/qun_data_details.html
@@ -373,6 +373,7 @@
 					//22.通过用户资料ID获取用户各项资料
 					//所需参数
 					var comData = {
+//						vtp:'Id',
 						vvl: data.stuid //查询的用户资料ID
 					};
 					//返回值model：model_userDataInfo
