--- a/JiaoBaoYun-hb/html/register/modify_password.html
+++ b/JiaoBaoYun-hb/html/register/modify_password.html
@@ -79,6 +79,7 @@
 					back.style.display = 'inline-block';
 					unickName0.style.display = 'none';
 					tempFlag = 1;
+					console.log('111111');
 				});
 				//设置密码
 				window.addEventListener('settingPW', function() {
@@ -88,6 +89,7 @@
 					unickName.style.display = 'block';
 					oldPassword.style.display = 'none';
 					document.getElementById('cancelBtn').style.display = 'none';
+					console.log('222222');
 				});
 				//上级传值如果是1，是修改密码
 				//				if(curPage.data&&curPage.data==1){
@@ -158,7 +160,8 @@
 							//需要加密的数据
 							var enData = {
 								utid: personalUTID,
-								pw: document.getElementById("password0").value
+								pw: document.getElementById("password0").value,
+								enData.vvl = document.getElementById("old-password").value; //旧密码
 							};
 							//不需要加密的数据
 							var comData = {
@@ -188,10 +191,12 @@
 										window.myStorage.setItem(window.storageKeyName.PERSONALINFO, tempInfo);
 									} 
 								});
-							} else { //修改密码，需要原先密码
+							} else if(tempFlag == 1){ //修改密码，需要原先密码
 								comData.vtp = 'rp'; //np(新建密码),rp(修改密码)
-								enData.vvl = document.getElementById("old-password").value; //旧密码
+								
 							}
+							console.log('comData:'+JSON.stringify(comData));
+							console.log('enData:'+JSON.stringify(enData));
 							postDataEncry(storageKeyName.MAINURL + 'PostRePW', enData, comData, 0, wd, function(data) {
 								//成功，关闭等待框
 								wd.close();
