--- a/JiaoBaoYun-hb/html/register/modify_password.html
+++ b/JiaoBaoYun-hb/html/register/modify_password.html
@@ -74,12 +74,12 @@
 				var unickName0 = document.getElementById("unickName0"); //昵称
 				//修改密码
 				window.addEventListener('changePasswords', function() {
+					console.log('111111');
 					oldPassword.style.display = 'block';
 					document.getElementById('cancelBtn').style.display = 'none';
 					back.style.display = 'inline-block';
 					unickName0.style.display = 'none';
 					tempFlag = 1;
-					console.log('111111');
 				});
 				//设置密码
 				window.addEventListener('settingPW', function() {
@@ -161,7 +161,7 @@
 							var enData = {
 								utid: personalUTID,
 								pw: document.getElementById("password0").value,
-								enData.vvl = document.getElementById("old-password").value; //旧密码
+								vvl:document.getElementById("old-password").value //旧密码
 							};
 							//不需要加密的数据
 							var comData = {
