发布动态 屏蔽添加本地文件

--- a/JiaoBaoYun-hb/html/quan/class-dynamic.html
+++ b/JiaoBaoYun-hb/html/quan/class-dynamic.html
@@ -25,9 +25,9 @@
 			    <div id="take_pic" class="take_pic">
 				    <a class="mui-icon iconfont icon-xiangji"></a>
 			    </div>
-			    <div id="add_file" class="add_file">
+			    <!--<div id="add_file" class="add_file">
 			    	<a class="mui-icon iconfont icon-jia"></a>
-			    </div>
+			    </div>-->
 			</div>
 		</div>
 	</body>
@@ -53,9 +53,9 @@
 			events.addTap('take_pic', function() {
 				camera.getPic(camera.getCamera());
 			})
-			events.addTap('add_file', function() {
-					asFiles.openASFiles()
-				})
+//			events.addTap('add_file', function() {
+//					asFiles.openASFiles()
+//				})
 				//发布按钮
 			events.addTap('publish', function() {
 				
